# uid-wrapper

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  CPackConfig.cmake  CTestConfig.cmake  ChangeLog  ConfigureChecks.cmake  README.md  config.h.cmake  uid_wrapper-config.cmake.in  uid_wrapper.pc.cmake
debian/: changelog  control  copyright  libuid-wrapper.lintian-overrides  rules  watch
debian/patches/: no-soname.diff  series
debian/tests/: control  tests
doc/: CMakeLists.txt  uid_wrapper.1  uid_wrapper.1.txt
src/: CMakeLists.txt
tests/: CMakeLists.txt  mock_exec_uid.c  test_fork_exec.c  test_getresuid.c  test_glibc_thread_support.c  test_setegid.c  test_seteuid.c  test_setgid.c  test_setgroups.c  test_setregid.c  test_setresgid.c  test_setresgid_unprivileged.c  test_setresuid.c  test_setreuid.c  test_setuid.c  test_setuid_euid1.c  test_setuid_euid2.c  test_syscall.c  test_syscall_gid.c  test_syscall_setgid32.c  test_syscall_setgroups32.c  test_syscall_setregid32.c  test_syscall_setresgid32.c  test_syscall_setresuid.c  test_syscall_setresuid32.c  test_syscall_setreuid.c  test_syscall_setreuid32.c  test_syscall_setuid.c  test_syscall_setuid32.c  test_thread_setreuid.c  test_thread_setuid.c  test_thread_sync_setreuid.c  test_uwrap_disabled.c  test_uwrap_enabled.c
